fix typo on CI file

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Creer fichier env.json
+      - name: Créer fichier .env
         run: |
           echo "DB_HOST=localhost" >> .env
           echo "DB_NAME=mydb" >> .env
