--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,4 +1,4 @@
-'''name: CD
+name: CD
 
 on:
   push:
@@ -26,4 +26,3 @@ jobs:
           pkill -f "python src/calculator.py" || true
           nohup python src/calculator.py > /tmp/calculator.log 2>&1 &
           echo "Déploiement terminé."
-'''
