--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,4 +1,4 @@
-'''name: CI/CD
+name: CI/CD
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -23,8 +23,8 @@ jobs:
         run: pytest -q
 
   deploy:
-    needs: test      # 🚀 ensures CD only runs if CI passed
-    runs-on: ubuntu-latest
+    needs: test      #  ensures CD only runs if CI passed
+    runs-on: self-hosted
     if: ${{ success() }}   # optional: extra safety
     steps:
       - name: Deploy to VM via SSH
